y.output
   0  $accept : program $end

   1  program : external func_definition

   2  external : external var_declaration
   3           | external func_definition
   4           | var_declaration
   5           | func_definition

   6  var_declaration : scalar_declaration
   7                  | array_declaration
   8                  | func_declaration
   9                  | const_declaration
  10                  | COMMENT

  11  scalar_declaration : NONVOIDTYPE ID_declarations ';'

  12  array_declaration : NONVOIDTYPE IDarr_declarations ';'

  13  func_declaration : NONVOIDTYPE IDfunc_declarations ';'
  14                   | VOIDTYPE IDfunc_declarations ';'

  15  const_declaration : CONST NONVOIDTYPE IDconst_declarations ';'

  16  ID_declarations : ID_declarations ',' ID_declaration
  17                  | ID_declaration

  18  ID_declaration : ID
  19                 | ID '=' expression

  20  IDarr_declarations : IDarr_declarations ',' IDarr_declaration
  21                     | IDarr_declaration

  22  IDarr_declaration : ID dimensions
  23                    | ID dimension '=' arr_content

  24  dimensions : dimensions dimension
  25             | dimension

  26  dimension : '[' INT_CONSTANT ']'

  27  arr_content : '{' expressions '}'
  28              | '{' '}'

  29  IDfunc_declarations : IDfunc_declarations ',' IDfunc_declaration
  30                      | IDfunc_declaration

  31  IDfunc_declaration : ID '(' parameters ')'
  32                     | ID '(' ')'

  33  parameters : parameters ',' parameter
  34             | parameter

  35  parameter : NONVOIDTYPE ID
  36            | NONVOIDTYPE ID dimensions

  37  IDconst_declarations : IDconst_declarations ',' IDconst_declaration
  38                       | IDconst_declaration

  39  IDconst_declaration : ID '=' CONSTANT

  40  CONSTANT : INT_CONSTANT
  41           | DOUB_CONSTANT
  42           | CHAR_CONSTANT
  43           | BOOL_CONSTANT

  44  func_definition : NONVOIDTYPE ID '(' parameters ')' '{' func_contents RETURN expression ';' '}'
  45                  | NONVOIDTYPE ID '(' ')' '{' func_contents RETURN expression ';' '}'
  46                  | NONVOIDTYPE ID '(' parameters ')' '{' RETURN expression ';' '}'
  47                  | NONVOIDTYPE ID '(' ')' '{' RETURN expression ';' '}'
  48                  | VOIDTYPE ID '(' parameters ')' '{' func_contents RETURN ';' '}'
  49                  | VOIDTYPE ID '(' ')' '{' func_contents RETURN ';' '}'
  50                  | VOIDTYPE ID '(' parameters ')' '{' RETURN ';' '}'
  51                  | VOIDTYPE ID '(' ')' '{' RETURN ';' '}'

  52  func_contents : var_declarations func_statements
  53                | var_declarations
  54                | func_statements

  55  var_declarations : var_declarations var_declaration
  56                   | var_declaration

  57  func_statements : func_statement func_statements
  58                  | func_statement

  59  func_statement : simple_statement
  60                 | func_invocation

  61  simple_statement : ID '=' expression ';'
  62                   | ID dimensions '=' expression ';'

  63  func_invocation : ID '(' expressions ')' ';'
  64                  | ID '(' ')' ';'

  65  expressions : expressions ',' expression
  66              | expression

  67  expression : CONSTANT
  68             | ID
  69             | ID dimensions
  70             | ID '(' expressions ')'
  71             | ID '(' ')'
  72             | expression '=' expression
  73             | expression '+' expression
  74             | expression '-' expression
  75             | expression '*' expression
  76             | expression '/' expression
  77             | expression '%' expression
  78             | expression ARITHCOMPARE expression
  79             | '!' expression
  80             | expression ANDAND expression
  81             | expression OROR expression
  82             | expression PLUSPLUS
  83             | expression MINUSMINUS

  84  COMMENT : COMMENT_START comment_contents COMMENT_END
  85          | COMMENT_SINGLE comment_content

  86  comment_contents : comment_contents comment_content
  87                   | comment_content

  88  comment_content : expression

state 0
	$accept : . program $end  (0)

	NONVOIDTYPE  shift 1
	VOIDTYPE  shift 2
	CONST  shift 3
	COMMENT_START  shift 4
	COMMENT_SINGLE  shift 5
	.  error

	program  goto 6
	external  goto 7
	func_definition  goto 8
	var_declaration  goto 9
	scalar_declaration  goto 10
	array_declaration  goto 11
	func_declaration  goto 12
	const_declaration  goto 13
	COMMENT  goto 14


state 1
	scalar_declaration : NONVOIDTYPE . ID_declarations ';'  (11)
	array_declaration : NONVOIDTYPE . IDarr_declarations ';'  (12)
	func_declaration : NONVOIDTYPE . IDfunc_declarations ';'  (13)
	func_definition : NONVOIDTYPE . ID '(' parameters ')' '{' func_contents RETURN expression ';' '}'  (44)
	func_definition : NONVOIDTYPE . ID '(' ')' '{' func_contents RETURN expression ';' '}'  (45)
	func_definition : NONVOIDTYPE . ID '(' parameters ')' '{' RETURN expression ';' '}'  (46)
	func_definition : NONVOIDTYPE . ID '(' ')' '{' RETURN expression ';' '}'  (47)

	ID  shift 15
	.  error

	ID_declarations  goto 16
	IDarr_declarations  goto 17
	IDfunc_declarations  goto 18
	ID_declaration  goto 19
	IDarr_declaration  goto 20
	IDfunc_declaration  goto 21


state 2
	func_declaration : VOIDTYPE . IDfunc_declarations ';'  (14)
	func_definition : VOIDTYPE . ID '(' parameters ')' '{' func_contents RETURN ';' '}'  (48)
	func_definition : VOIDTYPE . ID '(' ')' '{' func_contents RETURN ';' '}'  (49)
	func_definition : VOIDTYPE . ID '(' parameters ')' '{' RETURN ';' '}'  (50)
	func_definition : VOIDTYPE . ID '(' ')' '{' RETURN ';' '}'  (51)

	ID  shift 22
	.  error

	IDfunc_declarations  goto 23
	IDfunc_declaration  goto 21


state 3
	const_declaration : CONST . NONVOIDTYPE IDconst_declarations ';'  (15)

	NONVOIDTYPE  shift 24
	.  error


state 4
	COMMENT : COMMENT_START . comment_contents COMMENT_END  (84)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 31
	CONSTANT  goto 32
	comment_contents  goto 33
	comment_content  goto 34


state 5
	COMMENT : COMMENT_SINGLE . comment_content  (85)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 31
	CONSTANT  goto 32
	comment_content  goto 35


state 6
	$accept : program . $end  (0)

	$end  accept


state 7
	program : external . func_definition  (1)
	external : external . var_declaration  (2)
	external : external . func_definition  (3)

	NONVOIDTYPE  shift 1
	VOIDTYPE  shift 2
	CONST  shift 3
	COMMENT_START  shift 4
	COMMENT_SINGLE  shift 5
	.  error

	func_definition  goto 36
	var_declaration  goto 37
	scalar_declaration  goto 10
	array_declaration  goto 11
	func_declaration  goto 12
	const_declaration  goto 13
	COMMENT  goto 14


state 8
	external : func_definition .  (5)

	.  reduce 5


state 9
	external : var_declaration .  (4)

	.  reduce 4


state 10
	var_declaration : scalar_declaration .  (6)

	.  reduce 6


state 11
	var_declaration : array_declaration .  (7)

	.  reduce 7


state 12
	var_declaration : func_declaration .  (8)

	.  reduce 8


state 13
	var_declaration : const_declaration .  (9)

	.  reduce 9


state 14
	var_declaration : COMMENT .  (10)

	.  reduce 10


state 15
	ID_declaration : ID .  (18)
	ID_declaration : ID . '=' expression  (19)
	IDarr_declaration : ID . dimensions  (22)
	IDarr_declaration : ID . dimension '=' arr_content  (23)
	IDfunc_declaration : ID . '(' parameters ')'  (31)
	IDfunc_declaration : ID . '(' ')'  (32)
	func_definition : NONVOIDTYPE ID . '(' parameters ')' '{' func_contents RETURN expression ';' '}'  (44)
	func_definition : NONVOIDTYPE ID . '(' ')' '{' func_contents RETURN expression ';' '}'  (45)
	func_definition : NONVOIDTYPE ID . '(' parameters ')' '{' RETURN expression ';' '}'  (46)
	func_definition : NONVOIDTYPE ID . '(' ')' '{' RETURN expression ';' '}'  (47)

	'='  shift 38
	'['  shift 39
	'('  shift 40
	';'  reduce 18
	','  reduce 18

	dimensions  goto 41
	dimension  goto 42


state 16
	scalar_declaration : NONVOIDTYPE ID_declarations . ';'  (11)
	ID_declarations : ID_declarations . ',' ID_declaration  (16)

	';'  shift 43
	','  shift 44
	.  error


state 17
	array_declaration : NONVOIDTYPE IDarr_declarations . ';'  (12)
	IDarr_declarations : IDarr_declarations . ',' IDarr_declaration  (20)

	';'  shift 45
	','  shift 46
	.  error


state 18
	func_declaration : NONVOIDTYPE IDfunc_declarations . ';'  (13)
	IDfunc_declarations : IDfunc_declarations . ',' IDfunc_declaration  (29)

	';'  shift 47
	','  shift 48
	.  error


state 19
	ID_declarations : ID_declaration .  (17)

	.  reduce 17


state 20
	IDarr_declarations : IDarr_declaration .  (21)

	.  reduce 21


state 21
	IDfunc_declarations : IDfunc_declaration .  (30)

	.  reduce 30


state 22
	IDfunc_declaration : ID . '(' parameters ')'  (31)
	IDfunc_declaration : ID . '(' ')'  (32)
	func_definition : VOIDTYPE ID . '(' parameters ')' '{' func_contents RETURN ';' '}'  (48)
	func_definition : VOIDTYPE ID . '(' ')' '{' func_contents RETURN ';' '}'  (49)
	func_definition : VOIDTYPE ID . '(' parameters ')' '{' RETURN ';' '}'  (50)
	func_definition : VOIDTYPE ID . '(' ')' '{' RETURN ';' '}'  (51)

	'('  shift 49
	.  error


state 23
	func_declaration : VOIDTYPE IDfunc_declarations . ';'  (14)
	IDfunc_declarations : IDfunc_declarations . ',' IDfunc_declaration  (29)

	';'  shift 50
	','  shift 48
	.  error


state 24
	const_declaration : CONST NONVOIDTYPE . IDconst_declarations ';'  (15)

	ID  shift 51
	.  error

	IDconst_declarations  goto 52
	IDconst_declaration  goto 53


state 25
	CONSTANT : INT_CONSTANT .  (40)

	.  reduce 40


state 26
	CONSTANT : DOUB_CONSTANT .  (41)

	.  reduce 41


state 27
	CONSTANT : CHAR_CONSTANT .  (42)

	.  reduce 42


state 28
	CONSTANT : BOOL_CONSTANT .  (43)

	.  reduce 43


state 29
	expression : ID .  (68)
	expression : ID . dimensions  (69)
	expression : ID . '(' expressions ')'  (70)
	expression : ID . '(' ')'  (71)

	'['  shift 39
	'('  shift 54
	INT_CONSTANT  reduce 68
	DOUB_CONSTANT  reduce 68
	CHAR_CONSTANT  reduce 68
	BOOL_CONSTANT  reduce 68
	NONVOIDTYPE  reduce 68
	VOIDTYPE  reduce 68
	ID  reduce 68
	RETURN  reduce 68
	CONST  reduce 68
	COMMENT_START  reduce 68
	COMMENT_SINGLE  reduce 68
	COMMENT_END  reduce 68
	';'  reduce 68
	','  reduce 68
	'='  reduce 68
	OROR  reduce 68
	ANDAND  reduce 68
	'!'  reduce 68
	ARITHCOMPARE  reduce 68
	'+'  reduce 68
	'-'  reduce 68
	'*'  reduce 68
	'/'  reduce 68
	'%'  reduce 68
	PLUSPLUS  reduce 68
	MINUSMINUS  reduce 68
	'}'  reduce 68
	')'  reduce 68

	dimensions  goto 55
	dimension  goto 56


state 30
	expression : '!' . expression  (79)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 57
	CONSTANT  goto 32


state 31
	expression : expression . '=' expression  (72)
	expression : expression . '+' expression  (73)
	expression : expression . '-' expression  (74)
	expression : expression . '*' expression  (75)
	expression : expression . '/' expression  (76)
	expression : expression . '%' expression  (77)
	expression : expression . ARITHCOMPARE expression  (78)
	expression : expression . ANDAND expression  (80)
	expression : expression . OROR expression  (81)
	expression : expression . PLUSPLUS  (82)
	expression : expression . MINUSMINUS  (83)
	comment_content : expression .  (88)

	'='  shift 58
	OROR  shift 59
	ANDAND  shift 60
	ARITHCOMPARE  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	PLUSPLUS  shift 67
	MINUSMINUS  shift 68
	INT_CONSTANT  reduce 88
	DOUB_CONSTANT  reduce 88
	CHAR_CONSTANT  reduce 88
	BOOL_CONSTANT  reduce 88
	NONVOIDTYPE  reduce 88
	VOIDTYPE  reduce 88
	ID  reduce 88
	RETURN  reduce 88
	CONST  reduce 88
	COMMENT_START  reduce 88
	COMMENT_SINGLE  reduce 88
	COMMENT_END  reduce 88
	'!'  reduce 88


state 32
	expression : CONSTANT .  (67)

	.  reduce 67


state 33
	COMMENT : COMMENT_START comment_contents . COMMENT_END  (84)
	comment_contents : comment_contents . comment_content  (86)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	COMMENT_END  shift 69
	'!'  shift 30
	.  error

	expression  goto 31
	CONSTANT  goto 32
	comment_content  goto 70


state 34
	comment_contents : comment_content .  (87)

	.  reduce 87


state 35
	COMMENT : COMMENT_SINGLE comment_content .  (85)

	.  reduce 85


state 36
	program : external func_definition .  (1)
	external : external func_definition .  (3)

	$end  reduce 1
	NONVOIDTYPE  reduce 3
	VOIDTYPE  reduce 3
	CONST  reduce 3
	COMMENT_START  reduce 3
	COMMENT_SINGLE  reduce 3


state 37
	external : external var_declaration .  (2)

	.  reduce 2


state 38
	ID_declaration : ID '=' . expression  (19)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 71
	CONSTANT  goto 32


state 39
	dimension : '[' . INT_CONSTANT ']'  (26)

	INT_CONSTANT  shift 72
	.  error


state 40
	IDfunc_declaration : ID '(' . parameters ')'  (31)
	IDfunc_declaration : ID '(' . ')'  (32)
	func_definition : NONVOIDTYPE ID '(' . parameters ')' '{' func_contents RETURN expression ';' '}'  (44)
	func_definition : NONVOIDTYPE ID '(' . ')' '{' func_contents RETURN expression ';' '}'  (45)
	func_definition : NONVOIDTYPE ID '(' . parameters ')' '{' RETURN expression ';' '}'  (46)
	func_definition : NONVOIDTYPE ID '(' . ')' '{' RETURN expression ';' '}'  (47)

	NONVOIDTYPE  shift 73
	')'  shift 74
	.  error

	parameters  goto 75
	parameter  goto 76


state 41
	IDarr_declaration : ID dimensions .  (22)
	dimensions : dimensions . dimension  (24)

	'['  shift 39
	';'  reduce 22
	','  reduce 22

	dimension  goto 77


state 42
	IDarr_declaration : ID dimension . '=' arr_content  (23)
	dimensions : dimension .  (25)

	'='  shift 78
	';'  reduce 25
	','  reduce 25
	'['  reduce 25


state 43
	scalar_declaration : NONVOIDTYPE ID_declarations ';' .  (11)

	.  reduce 11


state 44
	ID_declarations : ID_declarations ',' . ID_declaration  (16)

	ID  shift 79
	.  error

	ID_declaration  goto 80


state 45
	array_declaration : NONVOIDTYPE IDarr_declarations ';' .  (12)

	.  reduce 12


state 46
	IDarr_declarations : IDarr_declarations ',' . IDarr_declaration  (20)

	ID  shift 81
	.  error

	IDarr_declaration  goto 82


state 47
	func_declaration : NONVOIDTYPE IDfunc_declarations ';' .  (13)

	.  reduce 13


state 48
	IDfunc_declarations : IDfunc_declarations ',' . IDfunc_declaration  (29)

	ID  shift 83
	.  error

	IDfunc_declaration  goto 84


state 49
	IDfunc_declaration : ID '(' . parameters ')'  (31)
	IDfunc_declaration : ID '(' . ')'  (32)
	func_definition : VOIDTYPE ID '(' . parameters ')' '{' func_contents RETURN ';' '}'  (48)
	func_definition : VOIDTYPE ID '(' . ')' '{' func_contents RETURN ';' '}'  (49)
	func_definition : VOIDTYPE ID '(' . parameters ')' '{' RETURN ';' '}'  (50)
	func_definition : VOIDTYPE ID '(' . ')' '{' RETURN ';' '}'  (51)

	NONVOIDTYPE  shift 73
	')'  shift 85
	.  error

	parameters  goto 86
	parameter  goto 76


state 50
	func_declaration : VOIDTYPE IDfunc_declarations ';' .  (14)

	.  reduce 14


state 51
	IDconst_declaration : ID . '=' CONSTANT  (39)

	'='  shift 87
	.  error


state 52
	const_declaration : CONST NONVOIDTYPE IDconst_declarations . ';'  (15)
	IDconst_declarations : IDconst_declarations . ',' IDconst_declaration  (37)

	';'  shift 88
	','  shift 89
	.  error


state 53
	IDconst_declarations : IDconst_declaration .  (38)

	.  reduce 38


state 54
	expression : ID '(' . expressions ')'  (70)
	expression : ID '(' . ')'  (71)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	')'  shift 90
	.  error

	expression  goto 91
	expressions  goto 92
	CONSTANT  goto 32


state 55
	dimensions : dimensions . dimension  (24)
	expression : ID dimensions .  (69)

	'['  shift 39
	INT_CONSTANT  reduce 69
	DOUB_CONSTANT  reduce 69
	CHAR_CONSTANT  reduce 69
	BOOL_CONSTANT  reduce 69
	NONVOIDTYPE  reduce 69
	VOIDTYPE  reduce 69
	ID  reduce 69
	RETURN  reduce 69
	CONST  reduce 69
	COMMENT_START  reduce 69
	COMMENT_SINGLE  reduce 69
	COMMENT_END  reduce 69
	';'  reduce 69
	','  reduce 69
	'='  reduce 69
	OROR  reduce 69
	ANDAND  reduce 69
	'!'  reduce 69
	ARITHCOMPARE  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'*'  reduce 69
	'/'  reduce 69
	'%'  reduce 69
	PLUSPLUS  reduce 69
	MINUSMINUS  reduce 69
	'}'  reduce 69
	')'  reduce 69

	dimension  goto 77


state 56
	dimensions : dimension .  (25)

	.  reduce 25


state 57
	expression : expression . '=' expression  (72)
	expression : expression . '+' expression  (73)
	expression : expression . '-' expression  (74)
	expression : expression . '*' expression  (75)
	expression : expression . '/' expression  (76)
	expression : expression . '%' expression  (77)
	expression : expression . ARITHCOMPARE expression  (78)
	expression : '!' expression .  (79)
	expression : expression . ANDAND expression  (80)
	expression : expression . OROR expression  (81)
	expression : expression . PLUSPLUS  (82)
	expression : expression . MINUSMINUS  (83)

	ARITHCOMPARE  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	PLUSPLUS  shift 67
	MINUSMINUS  shift 68
	INT_CONSTANT  reduce 79
	DOUB_CONSTANT  reduce 79
	CHAR_CONSTANT  reduce 79
	BOOL_CONSTANT  reduce 79
	NONVOIDTYPE  reduce 79
	VOIDTYPE  reduce 79
	ID  reduce 79
	RETURN  reduce 79
	CONST  reduce 79
	COMMENT_START  reduce 79
	COMMENT_SINGLE  reduce 79
	COMMENT_END  reduce 79
	';'  reduce 79
	','  reduce 79
	'='  reduce 79
	OROR  reduce 79
	ANDAND  reduce 79
	'!'  reduce 79
	'}'  reduce 79
	')'  reduce 79


state 58
	expression : expression '=' . expression  (72)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 93
	CONSTANT  goto 32


state 59
	expression : expression OROR . expression  (81)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 94
	CONSTANT  goto 32


state 60
	expression : expression ANDAND . expression  (80)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 95
	CONSTANT  goto 32


state 61
	expression : expression ARITHCOMPARE . expression  (78)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 96
	CONSTANT  goto 32


state 62
	expression : expression '+' . expression  (73)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 97
	CONSTANT  goto 32


state 63
	expression : expression '-' . expression  (74)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 98
	CONSTANT  goto 32


state 64
	expression : expression '*' . expression  (75)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 99
	CONSTANT  goto 32


state 65
	expression : expression '/' . expression  (76)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 100
	CONSTANT  goto 32


state 66
	expression : expression '%' . expression  (77)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	ID  shift 29
	'!'  shift 30
	.  error

	expression  goto 101
	CONSTANT  goto 32


state 67
	expression : expression PLUSPLUS .  (82)

	.  reduce 82


state 68
	expression : expression MINUSMINUS .  (83)

	.  reduce 83


state 69
	COMMENT : COMMENT_START comment_contents COMMENT_END .  (84)

	.  reduce 84


state 70
	comment_contents : comment_contents comment_content .  (86)

	.  reduce 86


state 71
	ID_declaration : ID '=' expression .  (19)
	expression : expression . '=' expression  (72)
	expression : expression . '+' expression  (73)
	expression : expression . '-' expression  (74)
	expression : expression . '*' expression  (75)
	expression : expression . '/' expression  (76)
	expression : expression . '%' expression  (77)
	expression : expression . ARITHCOMPARE expression  (78)
	expression : expression . ANDAND expression  (80)
	expression : expression . OROR expression  (81)
	expression : expression . PLUSPLUS  (82)
	expression : expression . MINUSMINUS  (83)

	'='  shift 58
	OROR  shift 59
	ANDAND  shift 60
	ARITHCOMPARE  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	PLUSPLUS  shift 67
	MINUSMINUS  shift 68
	';'  reduce 19
	','  reduce 19


state 72
	dimension : '[' INT_CONSTANT . ']'  (26)

	']'  shift 102
	.  error


state 73
	parameter : NONVOIDTYPE . ID  (35)
	parameter : NONVOIDTYPE . ID dimensions  (36)

	ID  shift 103
	.  error


state 74
	IDfunc_declaration : ID '(' ')' .  (32)
	func_definition : NONVOIDTYPE ID '(' ')' . '{' func_contents RETURN expression ';' '}'  (45)
	func_definition : NONVOIDTYPE ID '(' ')' . '{' RETURN expression ';' '}'  (47)

	'{'  shift 104
	';'  reduce 32
	','  reduce 32


state 75
	IDfunc_declaration : ID '(' parameters . ')'  (31)
	parameters : parameters . ',' parameter  (33)
	func_definition : NONVOIDTYPE ID '(' parameters . ')' '{' func_contents RETURN expression ';' '}'  (44)
	func_definition : NONVOIDTYPE ID '(' parameters . ')' '{' RETURN expression ';' '}'  (46)

	','  shift 105
	')'  shift 106
	.  error


state 76
	parameters : parameter .  (34)

	.  reduce 34


state 77
	dimensions : dimensions dimension .  (24)

	.  reduce 24


state 78
	IDarr_declaration : ID dimension '=' . arr_content  (23)

	'{'  shift 107
	.  error

	arr_content  goto 108


state 79
	ID_declaration : ID .  (18)
	ID_declaration : ID . '=' expression  (19)

	'='  shift 38
	';'  reduce 18
	','  reduce 18


state 80
	ID_declarations : ID_declarations ',' ID_declaration .  (16)

	.  reduce 16


state 81
	IDarr_declaration : ID . dimensions  (22)
	IDarr_declaration : ID . dimension '=' arr_content  (23)

	'['  shift 39
	.  error

	dimensions  goto 41
	dimension  goto 42


state 82
	IDarr_declarations : IDarr_declarations ',' IDarr_declaration .  (20)

	.  reduce 20


state 83
	IDfunc_declaration : ID . '(' parameters ')'  (31)
	IDfunc_declaration : ID . '(' ')'  (32)

	'('  shift 109
	.  error


state 84
	IDfunc_declarations : IDfunc_declarations ',' IDfunc_declaration .  (29)

	.  reduce 29


state 85
	IDfunc_declaration : ID '(' ')' .  (32)
	func_definition : VOIDTYPE ID '(' ')' . '{' func_contents RETURN ';' '}'  (49)
	func_definition : VOIDTYPE ID '(' ')' . '{' RETURN ';' '}'  (51)

	'{'  shift 110
	';'  reduce 32
	','  reduce 32


state 86
	IDfunc_declaration : ID '(' parameters . ')'  (31)
	parameters : parameters . ',' parameter  (33)
	func_definition : VOIDTYPE ID '(' parameters . ')' '{' func_contents RETURN ';' '}'  (48)
	func_definition : VOIDTYPE ID '(' parameters . ')' '{' RETURN ';' '}'  (50)

	','  shift 105
	')'  shift 111
	.  error


state 87
	IDconst_declaration : ID '=' . CONSTANT  (39)

	INT_CONSTANT  shift 25
	DOUB_CONSTANT  shift 26
	CHAR_CONSTANT  shift 27
	BOOL_CONSTANT  shift 28
	.  error

	CONSTANT  goto 112


state 88
	const_declaration : CONST NONVOIDTYPE IDconst_declarations ';' .  (15)

	.  reduce 15


state 89
	IDconst_declarations : IDconst_declarations ',' . IDconst_declaration  (37)

	ID  shift 51
	.  error

	IDconst_declaration  goto 113


state 90
	expression : ID '(' ')' .  (71)

	.  reduce 71


state 91
	expressions : expression .  (66)
	expression : expression . '=' expression  (72)
	expression : expression . '+' expression  (73)
	expression : expression . '-' expression  (74)
	expression : expression . '*' expression  (75)
	expression : expression . '/' expression  (76)
	expression : expression . '%' expression  (77)
	expression : expression . ARITHCOMPARE expression  (78)
	expression : expression . ANDAND expression  (80)
	expression : expression . OROR expression  (81)
	expression : expression . PLUSPLUS  (82)
	expression : expression . MINUSMINUS  (83)

	'='  shift 58
	OROR  shift 59
	ANDAND  shift 60
	ARITHCOMPARE  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	PLUSPLUS  shift 67
	MINUSMINUS  shift 68
	','  reduce 66
	'}'  reduce 66
	')'  reduce 66


state 92
	expressions : expressions . ',' expression  (65)
	expression : ID '(' expressions . ')'  (70)

	','  shift 114
	')'  shift 115
	.  error


state 93
	expression : expression . '=' expression  (72)
	expression : expression '=' expression .  (72)
	expression : expression . '+' expression  (73)
	expression : expression . '-' expression  (74)
	expression : expression . '*' expression  (75)
	expression : expression . '/' expression  (76)
	expression : expression . '%' expression  (77)
	expression : expression . ARITHCOMPARE expression  (78)
	expression : expression . ANDAND expression  (80)
	expression : expression . OROR expression  (81)
	expression : expression . PLUSPLUS  (82)
	expression : expression . MINUSMINUS  (83)

	'='  shift 58
	OROR  shift 59
	ANDAND  shift 60
	ARITHCOMPARE  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	PLUSPLUS  shift 67
	MINUSMINUS  shift 68
	INT_CONSTANT  reduce 72
	DOUB_CONSTANT  reduce 72
	CHAR_CONSTANT  reduce 72
	BOOL_CONSTANT  reduce 72
	NONVOIDTYPE  reduce 72
	VOIDTYPE  reduce 72
	ID  reduce 72
	RETURN  reduce 72
	CONST  reduce 72
	COMMENT_START  reduce 72
	COMMENT_SINGLE  reduce 72
	COMMENT_END  reduce 72
	';'  reduce 72
	','  reduce 72
	'!'  reduce 72
	'}'  reduce 72
	')'  reduce 72


state 94
	expression : expression . '=' expression  (72)
	expression : expression . '+' expression  (73)
	expression : expression . '-' expression  (74)
	expression : expression . '*' expression  (75)
	expression : expression . '/' expression  (76)
	expression : expression . '%' expression  (77)
	expression : expression . ARITHCOMPARE expression  (78)
	expression : expression . ANDAND expression  (80)
	expression : expression . OROR expression  (81)
	expression : expression OROR expression .  (81)
	expression : expression . PLUSPLUS  (82)
	expression : expression . MINUSMINUS  (83)

	ANDAND  shift 60
	ARITHCOMPARE  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	PLUSPLUS  shift 67
	MINUSMINUS  shift 68
	INT_CONSTANT  reduce 81
	DOUB_CONSTANT  reduce 81
	CHAR_CONSTANT  reduce 81
	BOOL_CONSTANT  reduce 81
	NONVOIDTYPE  reduce 81
	VOIDTYPE  reduce 81
	ID  reduce 81
	RETURN  reduce 81
	CONST  reduce 81
	COMMENT_START  reduce 81
	COMMENT_SINGLE  reduce 81
	COMMENT_END  reduce 81
	';'  reduce 81
	','  reduce 81
	'='  reduce 81
	OROR  reduce 81
	'!'  reduce 81
	'}'  reduce 81
	')'  reduce 81


state 95
	expression : expression . '=' expression  (72)
	expression : expression . '+' expression  (73)
	expression : expression . '-' expression  (74)
	expression : expression . '*' expression  (75)
	expression : expression . '/' expression  (76)
	expression : expression . '%' expression  (77)
	expression : expression . ARITHCOMPARE expression  (78)
	expression : expression . ANDAND expression  (80)
	expression : expression ANDAND expression .  (80)
	expression : expression . OROR expression  (81)
	expression : expression . PLUSPLUS  (82)
	expression : expression . MINUSMINUS  (83)

	ARITHCOMPARE  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	PLUSPLUS  shift 67
	MINUSMINUS  shift 68
	INT_CONSTANT  reduce 80
	DOUB_CONSTANT  reduce 80
	CHAR_CONSTANT  reduce 80
	BOOL_CONSTANT  reduce 80
	NONVOIDTYPE  reduce 80
	VOIDTYPE  reduce 80
	ID  reduce 80
	RETURN  reduce 80
	CONST  reduce 80
	COMMENT_START  reduce 80
	COMMENT_SINGLE  reduce 80
	COMMENT_END  reduce 80
	';'  reduce 80
	','  reduce 80
	'='  reduce 80
	OROR  reduce 80
	ANDAND  reduce 80
	'!'  reduce 80
	'}'  reduce 80
	')'  reduce 80

